<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>bme680_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 interface for the BME 680 located in the autonomy bottle</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/bme680.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/bme680/issues</url>

  <author>Evan Palmer</author>
  <author>Chris Holm</author>

  <depend>generate_parameter_library</depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
